objects/Free_Class__c.object
<CustomObject>
    <description>Custom object used to capture information on free classes that are offered in various places. Learn to swim classes at camp is a good example.</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <label>Course Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Adult Swim – Fitness Swimming</fullName>
                </value>
                <value>
                    <fullName>Adult Swim – Learning and Refining Swim Strokes</fullName>
                </value>
                <value>
                    <fullName>Adult Swim – Learning the Basics</fullName>
                </value>
                <value>
                    <fullName>General Water Safety</fullName>
                </value>
                <value>
                    <fullName>Home Pool Safety</fullName>
                </value>
                <value>
                    <fullName>Learn-to-Swim Level 1 – Introduction to Water Skills</fullName>
                </value>
                <value>
                    <fullName>Learn-to-Swim Level 2 – Fundamental Aquatic Skills</fullName>
                </value>
                <value>
                    <fullName>Learn-to-Swim Level 3 – Stroke Development</fullName>
                </value>
                <value>
                    <fullName>Learn-to-Swim Level 4 – Stroke Improvement</fullName>
                </value>
                <value>
                    <fullName>Learn-to-Swim Level 5 – Stroke Refinement</fullName>
                </value>
                <value>
                    <fullName>Learn-to-Swim Level 6 – Skill Proficiency – Fitness Swimmer</fullName>
                </value>
                <value>
                    <fullName>Learn-to-Swim Level 6 – Skill Proficiency – Fundamentals of Diving</fullName>
                </value>
                <value>
                    <fullName>Learn-to-Swim Level 6 – Skill Proficiency – Personal Water Safety</fullName>
                </value>
                <value>
                    <fullName>Parent and Child Aquatics Level 1</fullName>
                </value>
                <value>
                    <fullName>Parent and Child Aquatics Level 2</fullName>
                </value>
                <value>
                    <fullName>Parent Orientation to Swim Lessons</fullName>
                </value>
                <value>
                    <fullName>Preschool Aquatics Level 1</fullName>
                </value>
                <value>
                    <fullName>Preschool Aquatics Level 2</fullName>
                </value>
                <value>
                    <fullName>Preschool Aquatics Level 3</fullName>
                </value>
                <value>
                    <fullName>Private Swim Lesson</fullName>
                </value>
                <value>
                    <fullName>Rip Current Safety</fullName>
                </value>
                <value>
                    <fullName>Sun Safety</fullName>
                </value>
                <value>
                    <fullName>WHALE Tales – Longfellows</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facility_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Learn to Swim/Safety Outreach (Facility Name)</relationshipLabel>
        <relationshipName>Learn_to_Swim_Safety_Outreach</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grant_Funded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Grant Funded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select an Organization or Facility Account.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Facility Account, Organization Account, SB Organization Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Learn to Swim/Safety Outreach (Organization)</relationshipLabel>
        <relationshipName>Free_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Topic__c</fullName>
        <label>Other Topic</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>General Water Safety</fullName>
                </value>
                <value>
                    <fullName>Hands-only CPR (course code: HSSCPR701 r.2018</fullName>
                </value>
                <value>
                    <fullName>Home Pool Safety</fullName>
                </value>
                <value>
                    <fullName>Longfellow’s WHALE Tales</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Rip Current Safety</fullName>
                </value>
                <value>
                    <fullName>Sun Safety</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Students_Taught__c</fullName>
        <inlineHelpText>This total should include: Successful, Unsuccessful and Not Evaluated.</inlineHelpText>
        <label>Total Students Taught</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Students_not_Evaluated__c</fullName>
        <inlineHelpText>Please enter the number of students that took the class and weren&apos;t evaluated.</inlineHelpText>
        <label># of Students not Evaluated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Successful_Students__c</fullName>
        <inlineHelpText>Please enter the number of students that took the class and were successful.</inlineHelpText>
        <label># of Successful Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Unsuccessful_Students__c</fullName>
        <inlineHelpText>Please enter the number of students that took the class and weren&apos;t successful.</inlineHelpText>
        <label># of Unsuccessful Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Learn to Swim/Safety Outreach</label>
    <nameField>
        <displayFormat>FC - {00000000}</displayFormat>
        <label>Class ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learn to Swim/Safety Outreach</pluralLabel>
    <recordTypes>
        <fullName>Learn_to_Swim_Class</fullName>
        <active>true</active>
        <description>Record type to capture Learn to Swim Classes</description>
        <label>Learn to Swim Class</label>
    </recordTypes>
    <recordTypes>
        <fullName>Safety_Outreach</fullName>
        <active>true</active>
        <description>Record type to capture Safety Outreach efforts.</description>
        <label>Safety Outreach</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Organization_Not_Approved_Learn_to_Swim</fullName>
        <active>true</active>
        <description>Validation Rule to ensure that the organization is Approved Learn to Swim Facility.</description>
        <errorConditionFormula>AND(Organization__r.Approved_Learn_to_Swim_Facility__c =
False,
 RecordType.Name  =&quot;Learn to Swim Class&quot;)</errorConditionFormula>
        <errorMessage>The Organization you have selected is not approved as a Learn to Swim Facility.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Topic_Required</fullName>
        <active>true</active>
        <description>Validation Rule to enforce that if the topic = other than Other field needs to be filled out.</description>
        <errorConditionFormula>ISPICKVAL( Topic__c, &quot;Other&quot;)&amp;&amp;
ISBLANK (Other_Topic__c )</errorConditionFormula>
        <errorDisplayField>Other_Topic__c</errorDisplayField>
        <errorMessage>You&apos;ve selected Other for Topic, please add the topic in this Other field.</errorMessage>
    </validationRules>
</CustomObject>